--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Rock Papper Scissor</h1>
-    <div>
+    <div class="red">
         <a href="{{url_for('sreyas',choice = 'Rock')}}"><button><i class="fa-regular fa-hand-back-fist"></i></button></a>
         <a href="{{url_for('sreyas',choice = 'Papper')}}"><button><i class="fa-regular fa-hand"></i></button></a>
         <a href="{{url_for('sreyas',choice = 'Scissor')}}"><button><i class="fa-regular fa-hand-scissors"></i></button></a>
