--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
 <body>
    <section class="white">
     {% if computer == player_move %}
-    <h1>Game is tie</h1>
+    <h1>Game is tie !!!!</h1>
     {% else %}
     <h1>The winner is {{sreyas}}</h1>
     {% endif %}
