--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
     {% endif %}
     
     
-    {% if computer == 'Rock' %}
+    {% if computer == 'Stone' %}
     <h2>Computer move was <i class="fa-regular fa-hand-back-fist"></i></h2><br>
     {% elif computer == 'Papper' %}
     <h2>Computer move was <i class="fa-regular fa-hand"></i></h2><br>
@@ -27,7 +27,7 @@
     <h2>Computer move was <i class="fa-regular fa-hand-scissors"></i></h2><br>
     {% endif %}
 
-    {% if player_move == 'Rock' %}
+    {% if player_move == 'Stone' %}
     <h2>The player move was <i class="fa-regular fa-hand-back-fist"></i></h2><br>
     {% elif player_move == 'Papper' %}
     <h2>The player move was <i class="fa-regular fa-hand"></i></h2><br>
